# mac-os-junk-cleaner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  help_output.txt  pyproject.toml  ruff_output.txt  test_output.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  pipeline.yml  publish.yml
dummy_files/: safe.txt
src/macos_junk_cleaner/: cleaner.py  main.py  scanner.py
tests/: test_cli.py  test_scanner.py
