[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-junk-cleaner"
version = "0.1.0"
description = "A utility to list and clear junk files created by macOS indexation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "João Caetano", email = "joaomartinscaetano@proton.me"},
]
keywords = ["macos", "cleanup", "junk-files", "ds_store", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.urls]
Homepage = "https://github.com/joaomartinscaetano/macos-junk-cleaner"
Repository = "https://github.com/joaomartinscaetano/macos-junk-cleaner"
Issues = "https://github.com/joaomartinscaetano/macos-junk-cleaner/issues"
Changelog = "https://github.com/joaomartinscaetano/macos-junk-cleaner/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "python-semantic-release>=9.0.0",
]

[project.scripts]
mac-clean = "macos_junk_cleaner.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"

[tool.semantic_release]
version_variable = [
    "src/macos_junk_cleaner/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "uv build"

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
]
